fix bugs review

--- a/index.html
+++ b/index.html
@@ -8,53 +8,53 @@
     <link rel="stylesheet" href="scss/style.css" type="text/css">
   </head>
   <body>
-    <header>
-      <div class="top-header">      
+    <header  class="page-header">
+      <div class="top-header">			
         <div class="container">
-            <div class="row">
-              <div class="pull-right col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                <ul class="top-socials">
-                  <li><i class="fa fa-linkedin"></i></li>
-                  <li><i class="fa fa-twitter"></i></li>
-                  <li><i class="fa fa-pinterest"></i></li>
-                  <li><i class="fa fa-google-plus"></i></li>
-                  <li><i class="fa fa-rss"></i></li>
-                </ul>
-              </div>
-              <div class="pull-left logo col-lg-8 col-md-8 col-sm-12 col-xs-12">
-                <h1>BEM & SCSS</h1>
-                <p>Free PSD Website Template</p>
-              </div>
-              <div class="clearfix"></div>
+          <div class="row">
+            <div class="pull-right col-md-4">
+              <ul class="top-socials">
+                <li><i class="fa fa-linkedin"></i></li>
+                <li><i class="fa fa-twitter"></i></li>
+                <li><i class="fa fa-pinterest"></i></li>
+                <li><i class="fa fa-google-plus"></i></li>
+                <li><i class="fa fa-rss"></i></li>
+              </ul>
             </div>
+            <div class="pull-left logo col-md-8">
+              <h1>BEM & SCSS</h1>
+              <p>Free PSD Website Template</p>
+            </div>
+          </div>
         </div>
       </div>
       <div class="main-header">
         <div class="container">
-          <nav class="pull-left col-lg-6 col-md-6 col-sm-6 col-xs-12">
-            <ul class="main-menu" >
-              <li><a href="#home">Home</a></li>           
-              <li><a href="#features">Features</a></li>
-              <li><a href="#services">Services</a></li>
-              <li><a href="#contact">Contact</a></li>
-            </ul>
-          </nav>
-            <div class="pull-right col-lg-6 col-md-6 col-sm-6 col-xs-12">
-              <div class="search-wrapper pull-right">
+          <div class="row">
+            <nav class="pull-left col-sm-6">
+              <ul class="main-menu" >
+                <li><a href="#home">Home</a></li>           
+                <li><a href="#features">Features</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#contact">Contact</a></li>
+              </ul>
+            </nav>
+            <div class="pull-right col-sm-6">
+              <form a zction="#" class="search-wrapper pull-right">
                 <div class="search-box">
                   <input type="text" name="search" placeholder="Search Our Website...">
                 </div>
                 <button class="search" type="button">Search</button>
-              </div>
+              </form>
             </div>
-            <div class="clearfix"></div>
+          </div>
         </div>
       </div>
     </header>
-    <section class="main_service_area text-center">
+    <section class="main-service-area text-center">
       <div class="container">
-        <div class="head_title text-center">
-          <h1>SERVICES</h1>
+        <div class="head-title text-center">
+          <h2>SERVICES</h2>
           <div class="separator"></div>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut in egestas lectus.
             Etiam tempor odio tellus, at bibendum neque faucibus quis. 
@@ -63,7 +63,7 @@
           </p>
          </div>
           <div class="row">
-            <article class="grid-item col-lg-3 col-md-3 col-sm-6 col-xs-12">
+            <article class="grid-item col-lg-3 col-xs-12">
               <img src="images/icon1.png" alt="icon1">
               <div class="content-text">
                 <h3>Vivamuslibero Augue</h3>
@@ -71,7 +71,7 @@
               </div>
               <p><a href="#" target="_blank">Read More</a></p>
             </article>
-            <article class="grid-item col-lg-3 col-md-3 col-sm-6 col-xs-12">
+            <article class="grid-item col-lg-3 col-xs-12">
               <img src="images/icon2.png" alt="icon2">
               <div class="content-text">
                 <h3>Vivamuslibero Augue</h3>
@@ -79,7 +79,7 @@
               </div>
               <p><a href="#" target="_blank">Read More</a></p>
             </article>
-            <article class="grid-item col-lg-3 col-md-3 col-sm-6 col-xs-12">
+            <article class="grid-item col-lg-3 col-xs-12">
               <img src="images/icon3.png" alt="icon3">
               <div class="content-text">
                 <h3>Vivamuslibero Augue</h3>
@@ -87,7 +87,7 @@
               </div>
               <p><a href="#" target="_blank">Read More</a></p>
             </article>
-            <article class="grid-item col-lg-3 col-md-3 col-sm-6 col-xs-12">
+            <article class="grid-item col-lg-3 col-xs-12">
               <img src="images/icon4.png" alt="icon4">
               <div class="content-text">
                 <h3>Vivamuslibero Augue</h3>
@@ -98,10 +98,10 @@
         </div>
       </div>
     </section>
-    <section class="latest_blog">
+    <section class="latest-blog">
       <div class="container">
-        <div class="head_title text-center">
-          <h1>Latest From Our Blog</h1>
+        <div class="head-title text-center">
+          <h2>Latest From Our Blog</h2>
           <div class="separator"></div>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut in egestas lectus.
               Etiam tempor odio tellus, at bibendum neque faucibus quis. 
@@ -110,7 +110,7 @@
           </p>
          </div>
         <div class="row">
-          <article class="grid-item col-lg-3 col-md-3 col-sm-6 col-xs-12">
+          <article class="grid-item col-lg-3 col-sm-6 col-xs-12">
             <img src="images/img1.png" alt="img1">
             <div class="content-text">
               <h4>Project Title</h4>
@@ -118,7 +118,7 @@
             </div>
             <a href="#" class="btn btn--primary">View Details</a>
           </article>
-          <article class="grid-item col-lg-3 col-md-3 col-sm-6 col-xs-12">
+          <article class="grid-item col-lg-3 col-sm-6 col-xs-12">
             <img src="images/img2.png" alt="img2">
             <div class="content-text">
               <h4>Project Title</h4>
@@ -126,7 +126,7 @@
             </div>
             <a href="#" class="btn btn--primary">View Details</a>
           </article>
-          <article class="grid-item col-lg-3 col-md-3 col-sm-6 col-xs-12">
+          <article class="grid-item col-lg-3 col-sm-6 col-xs-12">
             <img src="images/img3.png" alt="i3g1">
             <div class="content-text">
               <h4>Project Title</h4>
@@ -134,7 +134,7 @@
             </div>
             <a href="#" class="btn btn--primary">View Details</a>
           </article>
-          <article class="grid-item col-lg-3 col-md-3 col-sm-6 col-xs-12">
+          <article class="grid-item col-lg-3 col-sm-6 col-xs-12">
             <img src="images/img4.png" alt="img4">
             <div class="content-text">
               <h4>Project Title</h4>
@@ -145,10 +145,10 @@
         </div>
       </div>
     </section>
-    <footer id="footer">
+    <footer class="page-footer">
       <div class="footer-info container">
         <div class="row">
-          <section class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+          <section class="col-lg-3 col-xs-12">
             <h4>CONTACT DETAILS</h4>
             <p>Convallisijusto vestas mus pellentum aenean sapibulum in aliquam volut pat integest nulla. </p>                
             <br>
@@ -156,7 +156,7 @@
             <p>Fax: xxxxx xxxxxxxxxx</p>
             <p>Email: contact@mydomain.com</p>
           </section>
-          <section class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+          <section class="col-lg-3 col-xs-12">
             <h4>QUICK LINKS</h4>
             <ul class="footer-links">
               <li><a href="#">Link Text Here</a></li>
@@ -165,7 +165,7 @@
               <li><a href="#">Link Text Here</a></li>
             </ul>
           </section>
-          <section class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+          <section class="col-lg-3 col-xs-12">
             <h4>FROM THE BLOG</h4>
             <article class="blog-item">
               <h4>Blog Post Title</h4>
@@ -174,20 +174,19 @@
               <a href="#" class="view-detail">Read More »</a>
             </article>
           </section>
-          <section class="form col-lg-3 col-md-3 col-sm-6 col-xs-12">
+          <section class="form col-lg-3 col-xs-12">
             <h4>GRAB OUR NEWSLETTER</h4>
             <form action="#">
               <input type="text" name="name" value="" placeholder="Name">
               <input type="text" name="email" value="" placeholder="Email">
-              <input type="submit" value="Submit">
+              <button type="button" class="btn--primary">Submit</button>
             </form> 
           </section>
         </div>
       </div>
-      <div class="copyright">
+      <div class="copyright clearfix">
         <p class="pull-left">Copyright © 2018 - All Rights Reserved - Domain Name</p>
         <p class="pull-right">Template by Templates</p>
-        <div class="clearfix"></div>
       </div>
     </footer>
   </body>
