--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="scss/style.css" type="text/css">
   </head>
   <body>
-    <header  class="page-header">
+    <header class="page-header">
       <div class="top-header">			
         <div class="container">
           <div class="row">
@@ -22,7 +22,7 @@
               </ul>
             </div>
             <div class="pull-left logo col-md-8">
-              <h1>BEM & SCSS</h1>
+              <h1>Bem & scss</h1>
               <p>Free PSD Website Template</p>
             </div>
           </div>
@@ -40,7 +40,7 @@
               </ul>
             </nav>
             <div class="pull-right col-sm-6">
-              <form a zction="#" class="search-wrapper pull-right">
+              <form action="#" class="search-wrapper pull-right">
                 <div class="search-box">
                   <input type="text" name="search" placeholder="Search Our Website...">
                 </div>
@@ -54,7 +54,7 @@
     <section class="main-service-area text-center">
       <div class="container">
         <div class="head-title text-center">
-          <h2>SERVICES</h2>
+          <h2>Services</h2>
           <div class="separator"></div>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut in egestas lectus.
             Etiam tempor odio tellus, at bibendum neque faucibus quis. 
@@ -149,7 +149,7 @@
       <div class="footer-info container">
         <div class="row">
           <section class="col-lg-3 col-xs-12">
-            <h4>CONTACT DETAILS</h4>
+            <h4>Contact detail</h4>
             <p>Convallisijusto vestas mus pellentum aenean sapibulum in aliquam volut pat integest nulla. </p>                
             <br>
             <p>Tel: xxxxx xxxxxxxxxx</p>
@@ -157,7 +157,7 @@
             <p>Email: contact@mydomain.com</p>
           </section>
           <section class="col-lg-3 col-xs-12">
-            <h4>QUICK LINKS</h4>
+            <h4>Quick links</h4>
             <ul class="footer-links">
               <li><a href="#">Link Text Here</a></li>
               <li><a href="#">Link Text Here</a></li>
@@ -166,16 +166,16 @@
             </ul>
           </section>
           <section class="col-lg-3 col-xs-12">
-            <h4>FROM THE BLOG</h4>
+            <h4>From the blog</h4>
             <article class="blog-item">
-              <h4>Blog Post Title</h4>
+              <h5>Blog Post Title</h5>
               <p>Posted by Admin on 00.00.0000</p>
               <p>Vestibulumaccumsan egestibulum eu justo convallis augue estas aenean elit intesque sed facilispede estibulum.</p>
               <a href="#" class="view-detail">Read More »</a>
             </article>
           </section>
           <section class="form col-lg-3 col-xs-12">
-            <h4>GRAB OUR NEWSLETTER</h4>
+            <h4>Grab our newsletter</h4>
             <form action="#">
               <input type="text" name="name" value="" placeholder="Name">
               <input type="text" name="email" value="" placeholder="Email">
